# phone_base

./: .env.example  .gitignore  Makefile  docker-compose.yaml  main.py  pyproject.toml  test.py
migrations/: env.py
migrations/versions/: 4f219d4a4a6e_init.py  8fc329ca5f3f_add_last_quantity.py  a07f0d9c5511_add_permission.py
pkg/: logger.py
src/bot/: bot.py
src/bot/filters/: permission.py  register.py
src/bot/handlers/: admin.py  funks.py  other.py  start.py
src/bot/handlers/user/: phone_base.py
src/bot/keyboards/: start.py  yes_no.py
src/bot/keyboards/user/inline/: phone.py  phone_base.py  phone_list.py
src/bot/keyboards/user/reply/: cancel.py
src/bot/lexicon/: kexicon.py  lexicon.py
src/bot/middlewares/: db.py  logger.py
src/bot/structures/: transfer_data.py
src/bot/structures/state/: user.py
src/config/: config.py
src/db/: db.py
src/db/models/: __init__.py  base.py  permission.py  phone.py  user.py
src/db/repositories/: base.py  permission.py  phone.py  user.py
