[tool.poetry]
name = "phone-wa"
version = "0.1.0"
description = ""
authors = ["Vasiliynemix <vasyanemix@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.2.0"
alembic = "^1.13.1"
loguru = "^0.7.2"
sqlalchemy = "^2.0.23"
python-dotenv = "^1.0.0"
asyncpg = "^0.29.0"
black = "^23.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
